# pdaf-ogs

./: CMakeLists.txt  README.md
pdaf_base/src/: CMakeLists.txt  PDAF-D_add_increment.F90  PDAF-D_alloc_filters.F90  PDAF-D_assimilate_enkf.F90  PDAF-D_assimilate_enkf_si.F90  PDAF-D_assimilate_estkf.F90  PDAF-D_assimilate_estkf_si.F90  PDAF-D_assimilate_etkf.F90  PDAF-D_assimilate_etkf_si.F90  PDAF-D_assimilate_lenkf.F90  PDAF-D_assimilate_lenkf_si.F90  PDAF-D_assimilate_lestkf.F90  PDAF-D_assimilate_lestkf_si.F90  PDAF-D_assimilate_letkf.F90  PDAF-D_assimilate_letkf_si.F90  PDAF-D_assimilate_lnetf.F90  PDAF-D_assimilate_lnetf_si.F90  PDAF-D_assimilate_lseik.F90  PDAF-D_assimilate_lseik_si.F90  PDAF-D_assimilate_netf.F90  PDAF-D_assimilate_netf_si.F90  PDAF-D_assimilate_seek.F90  PDAF-D_assimilate_seek_si.F90  PDAF-D_assimilate_seik.F90  PDAF-D_assimilate_seik_si.F90  PDAF-D_deallocate.F90  PDAF-D_enkf_alloc.F90  PDAF-D_enkf_analysis_rlm.F90  PDAF-D_enkf_analysis_rsm.F90  PDAF-D_enkf_gather_resid.F90  PDAF-D_enkf_memtime.F90  PDAF-D_enkf_obs_ensemble.F90  PDAF-D_enkf_update.F90  PDAF-D_estkf_AOmega.F90  PDAF-D_estkf_OmegaA.F90  PDAF-D_estkf_alloc.F90  PDAF-D_estkf_analysis.F90  PDAF-D_estkf_analysis_fixed.F90  PDAF-D_estkf_init.F90  PDAF-D_estkf_memtime.F90  (+140 more)
pdaf_user/: CMakeLists.txt  cmake_install.cmake  collect_state_pdaf.F90  distribute_state_pdaf.F90  get_rank.F90  init_dim_obs_f_pdaf.F90  init_dim_obs_l_pdaf.F90  init_dim_obs_pdaf.F90  init_ens.F90  init_model.F90  init_parallel_pdaf.F90  init_pdaf.F90  mod_assimilation.F90  mod_model.F90  prepoststep_ens_pdaf.F90
(+1 files in other folders)
